--- a/package.json
+++ b/package.json
@@ -27,13 +27,14 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "prebuild": "npm run update",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "preupdate": "git add . && git pull",
     "update":"git commit -m 'updating repo'",
     "postupdate": "git push origin main",
-    "predeploy": "npm run update && npm run build",
+    "predeploy": "npm run build",
     "deploy": "vercel",
     "publish": "vercel --prod"
   },
