--- a/package.json
+++ b/package.json
@@ -27,12 +27,11 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "prebuild": "npm run update",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "preupdate": "git add . && git pull",
-    "update":"git commit -m 'updating repo'",
+    "preupdate": "git pull",
+    "update":"git add . && git commit -m 'updating repo'",
     "postupdate": "git push origin main",
     "predeploy": "npm run build",
     "deploy": "vercel",
